--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,24 @@
-APP_NAME=Laravel
+APP_NAME=AquaLog
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:TFzYq46AbW87b+msDwcGU0sBp3IMXE/hVkw8Bqlq7gg=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_PORT=8080
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=aqualog
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sail
+DB_PASSWORD=password
+DB_MAX_OPEN_CONNS=4
+DB_MAX_IDLE_CONNS=4
+DB_CONN_MAX_LIFE_TIME=60
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -22,9 +27,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=memcached
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -50,3 +55,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://meilisearch:7700
